--- a/style.css
+++ b/style.css
@@ -44,3 +44,58 @@ h1{
     text-align: center;
     font-size: 30px;
 }
+.form{
+    display: flex;
+    justify-content: center;
+    margin: 0 auto;
+    flex-wrap: wrap;
+}
+.sign{
+    width: 100%;
+    padding: center;
+    text-align: center;
+    width: 340px;
+    border: none;
+    background:rgba(146, 145, 145, 1);
+    row-gap: 15px;
+    border-radius: 30px;
+    width: 340px;
+    height: 44px;
+}
+.email{
+    width: 340px;
+    text-align: center;
+    border: none;
+    margin-top: 29px;
+    background:rgba(146, 145, 145, 1);
+    margin-bottom: 15px;
+    border-radius: 30px;
+    width: 340px;
+    height: 44px;
+}
+.ButtomPanel{
+    width: 340px; 
+    margin: 20px auto 30px auto;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding: center;
+}
+.remember{
+    display: flex;
+    align-items: center;
+    column-gap: 6px;
+}
+.nameRemember{
+    color: #ffff;
+}
+.Link{
+color:rgba(21, 52, 22, 1);
+}
+.vhid{
+    display: flex;
+    width: 340px;
+    height: 44px;
+    align-items: center;
+    padding: center;
+}
