--- a/style.css
+++ b/style.css
@@ -97,5 +97,5 @@ color:rgba(21, 52, 22, 1);
     width: 340px;
     height: 44px;
     align-items: center;
-    padding: center;
+    justify-content: center;
 }
