--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ h1{
 .sign{
     width: 100%;
     padding: center;
-    text-align: center;
+    color: #ffff;
     width: 340px;
     border: none;
     background:rgba(146, 145, 145, 1);
@@ -64,7 +64,6 @@ h1{
 }
 .email{
     width: 340px;
-    text-align: center;
     border: none;
     margin-top: 29px;
     background:rgba(146, 145, 145, 1);
@@ -98,4 +97,51 @@ color:rgba(21, 52, 22, 1);
     height: 44px;
     align-items: center;
     justify-content: center;
+    background: rgba(21, 52, 22, 1);
+    color: #ffff;
+    border-radius: 30px;
+    cursor: pointer;
+}
+.registration{
+    display: flex;
+    margin: 0 auto;
+    margin-top: 40px;
+    column-gap: 17px;
+}
+.url{
+    color: #ffff;
+}
+.question{
+    color:rgba(21, 52, 22, 1);
+}
+.alternative{
+    margin: 0 auto;
+    margin-top: 30px;
+    color: rgba(21, 52, 22, 1);
+}
+.or{
+
+    margin: 0 auto;
+    flex-wrap: wrap;
+    padding: center;
+    margin-top: 20px;
+    
+}
+.social{
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0 auto;
+    margin-top: 20px;
+}
+.inst{
+    display: flex;
+}
+.img{
+    display:flex;
+}
+.Sign::placeholder{
+    color: #ffff;
+}
+.password{
+    color: #ffff;
 }
